2013-03-15  Agustín Martín Domingo  <agustin.martin@hispalinux.es>

	* textmodes/ispell.el (ispell-command-loop): Remove
	flyspell highlight of a word when ispell accepts it (bug #14178).

2013-04-15  Michael Albinus  <michael.albinus@gmx.de>

	* net/ange-ftp.el (ange-ftp-run-real-handler-orig): New defun,
	uses code from the previous `ange-ftp-run-real-handler'.
	(ange-ftp-run-real-handler): Set it to `tramp-run-real-handler'
	only in case that function exist.  This is needed for proper
	unloading of Tramp.

2013-04-15  Tassilo Horn  <tsdh@gnu.org>

	* textmodes/reftex-vars.el (reftex-label-regexps): New defcustom.

	* textmodes/reftex.el (reftex-compile-variables): Use it.

2013-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (normal-mode): Only use default major-mode if no other mode
	was specified.

	* emacs-lisp/trace.el (trace-values): New function.

	* files.el: Allow : in local variables (bug#14089).
	(hack-local-variable-regexp): New var.
	(hack-local-variables-prop-line, hack-local-variables): Use it.

2013-04-13  Roland Winkler  <winkler@gnu.org>

	* textmodes/bibtex.el (bibtex-search-entries): Bug fix.  Use match
	data before it gets modified by bibtex-beginning-of-entry.

2013-04-13  Roland Winkler  <winkler@gnu.org>

	* textmodes/bibtex.el (bibtex-url): Doc fix.

2013-04-13  Roland Winkler  <winkler@gnu.org>

	* textmodes/bibtex.el (bibtex-initialize): If the current buffer
	does not visit a BibTeX file, exclude it from the list of buffers
	returned by bibtex-initialize.

2013-04-13  Stephen Berman  <stephen.berman@gmx.net>

	* window.el (split-window): Remove interactive form, since as a
	command this function is a special case of split-window-below.
	Correct doc string.

2013-04-12  Roland Winkler  <winkler@gnu.org>

	* faces.el (read-face-name): Do not override value of arg default.
	Allow single faces and strings as default values.  Remove those
	elements from return value that are not faces.
	(describe-face): Simplify.