@@ -1,3 +1,15 @@
+2013-04-15  Filipp Gunbin  <fgunbin@fastmail.fm>
+
+	Reformulate java imenu-generic-expression.
+	The old expression contained ill formed regexps.
+
+	* progmodes/cc-menus.el (cc-imenu-java-ellipsis-regexp)
+	(cc-imenu-java-type-spec-regexp, cc-imenu-java-comment-regexp)
+	(cc-imenu-java-method-arg-regexp): New defconsts.
+	(cc-imenu-java-build-type-args-regex): New defun.
+	(cc-imenu-java-generic-expression): Fixed, to remove "ambiguous"
+	handling of spaces in the regexp.
+
 2013-03-15  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
 
 	* textmodes/ispell.el (ispell-command-loop): Remove
